[package]
name = "bioseg"
version = "0.1.0"
authors = ["William Gasper <wigasper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.0"
rand = "0.7.3"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
